# File_INI

./: CMakeLists.txt  INIManager.cpp  INIManager.h  NotFoundException.h  README.MD  main.cpp
FileINI/: CMakeLists.txt
File_INI/: CMakeLists.txt  INIManager.cpp  INIManager.h  NotFoundException.h  main.cpp
File_INI-master/: CMakeLists.txt  INIManager.cpp  INIManager.h  main.cpp
File_INI-master/test/: CMakeLists.txt
test/: INIManagerTest.cpp  runAllTests.cpp
